@@ -6,7 +6,7 @@ Ring modulators used as exciter of a waveguide bank.
 """
 from pyo import *
 
-s = Server().boot()
+s = Server(duplex=0).boot()
 
 tab_m = HarmTable([1,0,0,0,0,.3,0,0,0,0,0,.2,0,0,0,0,0,.1,0,0,0,0,.05]).normalize()
 tab_p = HarmTable([1,0,.33,0,.2,0,.143,0,.111])
